# imagen-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MODERNIZATION_PLAN.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
docs/: PROVIDER_SELECTION.md
src/: __init__.py  cli.py  exceptions.py  server.py
src/config/: __init__.py  constants.py  paths.py  pricing.py  settings.py
src/models/: __init__.py  input_models.py
src/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py  registry.py  selector.py
src/services/: __init__.py  conversation_store.py  dialogue.py  logging_config.py  rate_limiter.py
src/tools/: __init__.py
tests/: __init__.py  conftest.py  test_dotenv.py  test_gemini_generate.py  test_handlers.py  test_integration.py  test_list_models_and_main.py  test_logging_config.py  test_openai_provider.py  test_paths.py  test_pricing.py  test_providers.py  test_rate_limiter.py  test_selector.py  test_server.py
