[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imagen-mcp"
version = "0.1.0"
authors = [
  { name="Michael Jabbour", email="michael@example.com" },
]
description = "A Model Context Protocol (MCP) server for intelligent multi-provider image generation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.16.0",
    "fastmcp>=2.12.5",
    "pydantic>=2.12.3",
    "httpx>=0.24.0",
    "google-genai>=1.52.0",
    "pillow>=10.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.genai",
    "google.genai.types",
    "mcp.server.fastmcp"
]
ignore_missing_imports = true
