[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imagen-mcp"
version = "0.3.0"
authors = [
  { name="Michael Jabbour", email="michael@example.com" },
]
description = "A Model Context Protocol (MCP) server for intelligent multi-provider image generation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Runtime dependencies.
#
# The server uses the FastMCP implementation bundled inside the `mcp` SDK
# (`from mcp.server.fastmcp import FastMCP`), NOT the standalone `fastmcp`
# package. mcp >= 1.26 provides tool annotations, structured output,
# `ctx.elicit()`, `ctx.report_progress()`, and streamable-http transport,
# which is everything this server needs. The standalone `fastmcp` package
# was removed from the dependency set in v0.3.x because it was never
# imported (see MODERNIZATION_PLAN.md Phase 8).
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.12.3",
    "httpx>=0.28.0",
    "google-genai>=1.54.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.9.0",
    "pre-commit>=3.0",
    "types-pillow>=10.2.0",
]

[project.scripts]
imagen-mcp = "src.server:main"
imagen-mcp-cli = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.genai",
    "google.genai.types",
    "mcp.server.fastmcp",
    "mcp.types",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/cli.py",  # interactive CLI; exercised manually
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
